# py-pure-client

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  settings.json  setup.py
.github/: CODEOWNERS
.github/scripts/: render_debian_files.py  render_rpm_files.py  validate_version.py
.github/workflows/: debian-package.yaml  documentation.yaml  release.yaml  rpm-package.yaml
docs/: .buildinfo  archive.html  changelog.html  changelog.rst  conf.py  fa_reference.rst  fb_reference.rst  genindex.html  index.html  index.rst  installation.html  installation.rst  objects.inv  pure1_quick_start.rst  pure1_reference.html  pure1_reference.rst  py-modindex.html  quick_start.html  quick_start.rst  requirements.txt  search.html  searchindex.js  shared_reference.html
docs/_sources/: archive.rst.txt  changelog.rst.txt  fa_reference.rst.txt  fb_reference.rst.txt  index.rst.txt  pure1_reference.rst.txt  quick_start.rst.txt  shared_reference.rst.txt
docs/_static/: documentation_options.js
docs/source/: modules.html  pypureclient.flasharray.FA_2_0.api.html  pypureclient.flasharray.FA_2_0.api.rst  pypureclient.flasharray.FA_2_0.html  pypureclient.flasharray.FA_2_0.models.html  pypureclient.flasharray.FA_2_0.models.rst  pypureclient.flasharray.FA_2_0.rst  pypureclient.flasharray.FA_2_1.api.html  pypureclient.flasharray.FA_2_1.api.rst  pypureclient.flasharray.FA_2_1.html  pypureclient.flasharray.FA_2_1.models.html  pypureclient.flasharray.FA_2_1.models.rst  pypureclient.flasharray.FA_2_1.rst  pypureclient.flasharray.FA_2_10.api.html  pypureclient.flasharray.FA_2_10.api.rst  pypureclient.flasharray.FA_2_10.html  pypureclient.flasharray.FA_2_10.models.html  pypureclient.flasharray.FA_2_10.models.rst  pypureclient.flasharray.FA_2_10.rst  pypureclient.flasharray.FA_2_11.api.html  pypureclient.flasharray.FA_2_11.html  pypureclient.flasharray.FA_2_11.models.html  pypureclient.flasharray.FA_2_11.models.rst  pypureclient.flasharray.FA_2_11.rst  pypureclient.flasharray.FA_2_13.api.html  pypureclient.flasharray.FA_2_13.html  pypureclient.flasharray.FA_2_13.models.html  pypureclient.flasharray.FA_2_13.models.rst  pypureclient.flasharray.FA_2_13.rst  pypureclient.flasharray.FA_2_14.api.html  pypureclient.flasharray.FA_2_14.api.rst  pypureclient.flasharray.FA_2_14.html  pypureclient.flasharray.FA_2_14.models.html  pypureclient.flasharray.FA_2_14.models.rst  pypureclient.flasharray.FA_2_14.rst  pypureclient.flasharray.FA_2_15.api.html  pypureclient.flasharray.FA_2_15.api.rst  pypureclient.flasharray.FA_2_15.html  pypureclient.flasharray.FA_2_15.models.html  pypureclient.flasharray.FA_2_15.models.rst  (+256 more)
py_pure_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pypureclient/: __init__.py  _helpers.py  _version.py  api_token_manager.py  client_settings.py  configuration.py  exceptions.py  keywords.py  properties.py  reference_type.py  responses.py  token_manager.py
pypureclient/_transport/: __init__.py  api_client.py  api_response.py  configuration.py  exceptions.py  rest.py
pypureclient/flasharray/: __init__.py  __modules_dict.py  client.py
pypureclient/flashblade/: __init__.py  __modules_dict.py  client.py
pypureclient/pure1/: __init__.py  __modules_dict.py  api_client.py  client.py  configuration.py  exceptions.py  keywords.py  properties.py  responses.py  rest.py  token_manager.py
(+61203 files in other folders)
