[project]
name = "py-pure-client"
version = "1.56.0"
description = "Pure Storage Python clients for FlashArray, FlashBlade, and Pure1 APIs"
authors = [
    { name = "Pure Storage", email = "support@purestorage.com" }
]
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.5"
keywords = ['Swagger', 'Pure Storage', 'Python', 'clients', 'REST', 'API', 'FlashArray', 'FlashBlade', 'Pure1']
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent"
]
dependencies = [
    'certifi >= 2024.07.04',
    'six >=1.10',
    'python_dateutil >=2.5.3',
    'setuptools >=70.0.0',
    'urllib3 >= 1.26.17',
    'paramiko >= 3.4.0',
    'pyjwt >=2.0.0',
    'requests >= 2.32.0',
    'typing >=3.7.4.1; python_version < "3.5"',
]

[project.urls]
"GitHub" = "https://github.com/PureStorage-OpenConnect/py-pure-client"
"Documentation" = "https://pure-storage-py-pure-client.readthedocs-hosted.com/en/latest/quick_start.html"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

