[project]
name = "py-pure-client"
version = "1.73.1"
description = "Pure Storage Python clients for FlashArray, FlashBlade, and Pure1 APIs"
authors = [
    { name = "Pure Storage", email = "support@purestorage.com" }
]
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
keywords = ['Swagger', 'Pure Storage', 'Python', 'clients', 'REST', 'API', 'FlashArray', 'FlashBlade', 'Pure1']
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent"
]
dependencies = [
    'certifi >= 2024.07.04',
    'python_dateutil >=2.8.2',
    'setuptools >=70.0.0',
    'urllib3 >= 1.26.17',
    'paramiko >= 3.4.0',
    'pyjwt >=2.0.0',
    'pydantic >= 1.10.14',
    'aenum >= 3.1.15'
]

[project.urls]
"GitHub" = "https://github.com/PureStorage-OpenConnect/py-pure-client"
"Documentation" = "https://code.purestorage.com/py-pure-client/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.mypy]
packages = ["pypureclient"]
