[project]
name = "py-pure-client"
version = "1.90.0"
description = "Everpure Python clients for FlashArray, FlashBlade, and Pure1 APIs"
authors = [
    { name = "Everpure", email = "openconnect@everpuredata.com" }
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["SDK", "Pure Storage", "Everpure", "Python", "clients", "REST", "API", "FlashArray", "FlashBlade", "Pure1"]
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent"
]
dependencies = [
    "python_dateutil >=2.8.2",
    "urllib3 >= 1.26.17",
    "paramiko >= 3.4.0",
    "pyjwt >=2.0.0",
    "pydantic >= 1.10.14"
]

[project.urls]
"GitHub" = "https://github.com/PureStorage-OpenConnect/py-pure-client"
"Documentation" = "https://code.purestorage.com/py-pure-client/"

[build-system]
requires = ["hatchling >= 1.21"] # Ubuntu 24.04 (noble) compatible
build-backend = "hatchling.build"

[tool.pylint."MESSAGES CONTROL"]
extension-pkg-whitelist = "pydantic"

[tool.mypy]
packages = ["pypureclient"]

[tool.hatch.build.targets.wheel]
packages = ["pypureclient"]